--- a/S220519081246/index.html
+++ b/S220519081246/index.html
@@ -1,3 +1,11 @@
-<main class="main-container">
+<html>
+<head>
+<link rel="stylesheet" href="./styles.css">
+</head>
+<body class="main-container">
+<main>
 <h1>2002년 5월 매장</h1>
 </main>
+</body>
+</html>
+
