--- a/S220526021017/index.html
+++ b/S220526021017/index.html
@@ -1,3 +1,10 @@
-<main class="main-container">
-<h1 class="animate-rotate-r">123123 매장</h1>
+<html>
+<head>
+<link rel="stylesheet" href="./styles.css">
+</head>
+<body class="main-container">
+<main>
+<h1>123123 매장</h1>
 </main>
+</body>
+</html>
