--- a/S220526021017/index.html
+++ b/S220526021017/index.html
@@ -1,10 +1,3 @@
-<html>
-<head>
-<link rel="stylesheet" href="./styles.css">
-</head>
-<body class="main-container">
-<main>
+<main id="S220526021017" class="main-container">
 <h1>123123 매장</h1>
 </main>
-</body>
-</html>
