--- a/S220519081246/index.html
+++ b/S220519081246/index.html
@@ -1,11 +1,4 @@
-<html>
-<head>
-<link rel="stylesheet" href="./styles.css">
-</head>
-<body class="main-container">
-<main>
+<main id="S220519081246" class="main-container">
 <h1>2002년 5월 매장</h1>
 </main>
-</body>
-</html>
 
