--- a/S220519081246/index.html
+++ b/S220519081246/index.html
@@ -1,4 +1,1 @@
-<main id="S220519081246" class="main-container">
-<h1>2002년 5월 매장</h1>
-</main>
-
+<body><link rel="stylesheet" type="text/css" href="./index.css"><script src="./index.js" defer="defer"></script><main id="S220519081246" class="main-container"><h1>2002년 5월 매장 (green)</h1></main></body>
