--- a/S220526021017/index.html
+++ b/S220526021017/index.html
@@ -1,3 +1,1 @@
-<main id="S220526021017" class="main-container">
-<h1>123123 매장</h1>
-</main>
+<body><link rel="stylesheet" type="text/css" href="./index.css"><script src="./index.js" defer="defer"></script><main id="S220526021017" class="main-container"><h1>123123 매장 (red)</h1></main></body>
